<resources>
    <string name="app_name">Fork</string>

    <!-- Auth query map keys -->
    <string name="authClientId">client_id</string>
    <string name="authClientSecret">client_secret</string>
    <string name="authClientCode">code</string>

    <!-- Auth fragment -->
    <string name="labelAuthTitle">Authorize using Github</string>
    <string name="labelAuthUsername">Enter your username</string>
    <string name="actionLogin">Login</string>
    <string name="urlOAuth">%s?client_id=%s&amp;redirect_uri=%s</string>
    <string name="urlQueryParamCode">code</string>

    <!-- Main menu -->
    <string name="menuLabelHome">Home</string>
    <string name="menuLabelSearch">Search</string>
    <string name="menuLabelFeed">Feed</string>
    <string name="menuLabelNotifications">Notifications</string>
    <string name="menuLabelProfile">Profile</string>

    <!-- Profile menu -->
    <string name="menuSignOut">Sign out</string>

    <!-- Profile fragment -->
    <string name="labelUsername">\u0040%s</string>

    <!-- Repository item -->
    <string name="labelRepositoryOwner"><b>Owner</b>: %s</string>
    <string name="labelRepositoryLanguage"><b>Language</b>: %s</string>
    <string name="labelRepositoryUpdatedDate"><b>Updated</b>: %s</string>
    <string name="labelRepositoryForks"><b>Forks</b>: %s</string>
    <string name="labelRepositoryWatchers"><b>Watchers</b>: %s</string>
    <string name="labelRepositoryStars"><b>Stargazers</b>: %s</string>

    <!-- Event item -->
    <string name="labelEventTypeTitle"><b>Event</b>: %s</string>
    <string name="labelEventTypeCreate"><b>%s</b> created repository: <b>%s</b></string>
    <string name="labelEventTypeIssueComment"><b>%s</b> created comment on issue in repository: <b>%s</b></string>
    <string name="labelEventTypeIssue"><b>%s</b> created issue on repository: <b>%s</b></string>
    <string name="labelEventTypePublic"><b>%s</b> made repository <b>%s</b> public: %s</string>
    <string name="labelEventTypePush"><b>%s</b>  pushed commit to repository: <b>%s</b></string>
    <string name="labelEventTypeWatch"><b>%s</b> is watching repository: <b>%s</b></string>
    <string name="labelEventTypeFork"><b>%s</b> forked repository: <b>%s</b></string>

    <!-- Home fragment -->
    <string name="labelHomeTitle">Welcome to Fork, your own simple GitHub android client</string>
    <string name="labelHomeSubtitle">Select one of the options bellow to get insight into your work in more detail, as well as explore rest of the screens</string>
    <string name="labelBtnRepositories"><b><big>Repositories (browser)</big></b><br /> - <small>Check out your repositories</small></string>
    <string name="labelBtnOrganizations"><b><big>Organizations (browser)</big></b><br /> - <small>See all organizations you\'re part of</small></string>
</resources>